--- a/semester_project_cse321.tex
+++ b/semester_project_cse321.tex
@@ -164,7 +164,9 @@ The ability to add new transactions to the account without user input.
 \subsection{Account Aggregation}
 The ability to access multiple accounts and view combined analytics.
 
-\section{Our Website VS Existing Websites:}
+\pagebreak
+
+\subsection{Our Website VS Existing Websites:}
 
 
 
@@ -224,6 +226,34 @@ The ability to access multiple accounts and view combined analytics.
 \end{tabular}
 \end{table}
 
+\section{Storyboard:}
+\subsection{Target Audience:}
+Our typical customers can be divided into two groups, personal users, and business users. In order to better shape the user stories, we are going to make some broad generalizations about these groups. Additionally, certain tags will automatically be generated or applied differently.\\
+\subsubsection{Personal Users}
+Personal users, for the most part have one or two credit/debit accounts, and usually only have to deal with their own expenses.\\
+\subsubsection{Business Users}
+By contrast, business users tend to have several credit/debit accounts, 3 or more, and are likely to want to make use of the more complex features, such as account aggregation.\\
+\subsection{Design Prototype:}
+\includegraphics[width=3in]{HomePage.png}\\
+This is the page users will land on when thy search for our site. If you already have an account you simply need to sign in, if you don't you need to register.\\
+
+\includegraphics[width=3in]{create_account.jpg}\\
+New users add their email address to create an account, choose whether is a personal or business account. This changes the default budgets and tags when the account is first created.\\
+
+\includegraphics[width=3in]{first_time_add_bank_accounts.jpg}\\
+The second step of account creation is adding the users financial accounts.
+
+\includegraphics[width=3in]{your_accounts_page.jpg}\\
+The users can view their accounts in aggregate and also add new accounts if they are created.\\
+
+\includegraphics[width=3in]{BudgetPage.png}\\
+This is the page users will land on when they get done with registering or when they sign in. Here they can add and edit their budgets and add transactions.\\
+
+\includegraphics[width=3in]{BudgetPageWithMenu.png}\\
+This shows the various popups that the page will have. Pushing the add transaction button will prompt the user to add in a transaction. Pushing the menu in the top left will show the user different pages they can go to.\\
+
+\includegraphics[width=3in]{StatsPage.png}\\
+This page shows a breakdown of how much the user has been spending and shows the spending habits of the user.\\
 %==========================================================
 \end{document}
 %==========================================================
