Updated Tex file and Images
Changed three dots in business pages to  actual transactions and added mobile stats page.

--- a/texfiles/semester_project_cse321.tex
+++ b/texfiles/semester_project_cse321.tex
@@ -271,6 +271,11 @@ From the "Your Accounts" page users can edit an existing account, or delete acco
 \subsubsection{Stats View}
 \includegraphics[width=3in]{StatsPage.png}\\
 This page shows a breakdown of how much the user has been spending and shows the spending habits of the user. Note the dropdown menu up top, this is used to select what time period you'd like to look at, 1 month, 3 months, a year, or all time. The table below shows all transactions, and is default sorted by the name of the transaction, but you can click on the headings to either sort by those headings, or click a heading twice to switch to reverse sorting by that heading.\\
+
+
+
+\includegraphics[scale=0.5]{StatsPageMobile.png}\\
+In all pages up until this, the mobile interface has been the same as the desktop interface, but on this page, the mobile interface needs to be adjusted for better user experience. The functionality of the page remains the same, but the position of various elements on the page has been adjusted in order to display the information in a more readable fashion.\\
 %==========================================================
 \end{document}
 %==========================================================
